[gd_scene load_steps=9 format=3 uid="uid://l4b71wm2h1qv"]

[ext_resource type="Script" path="res://Scripts/S_main_screen.gd" id="1_u2v60"]
[ext_resource type="PackedScene" uid="uid://dexludemq64ko" path="res://Scenes/SC_Background.tscn" id="2_fb2xg"]
[ext_resource type="FontFile" uid="uid://7lopbdtrwuk0" path="res://Styles/Resources/Geologica-Medium.ttf" id="3_tt3af"]
[ext_resource type="StyleBox" uid="uid://dre57ue11minl" path="res://Styles/TO_ButtonHoverMM.tres" id="4_7spjx"]
[ext_resource type="StyleBox" uid="uid://b1ombpdano1gk" path="res://Styles/TO_ButtonNormalMM.tres" id="5_eusem"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ly1y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nqfso"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b4onk"]

[node name="Main screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2v60")

[node name="Background" parent="." instance=ExtResource("2_fb2xg")]

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.5
offset_top = -348.0
offset_right = 296.5
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7ly1y")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="B_Ishikawa" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_normal_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_fonts/font = ExtResource("3_tt3af")
theme_override_font_sizes/font_size = 65
theme_override_styles/focus = ExtResource("4_7spjx")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover_pressed = ExtResource("4_7spjx")
theme_override_styles/hover_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover = ExtResource("4_7spjx")
theme_override_styles/normal_mirrored = ExtResource("5_eusem")
theme_override_styles/normal = ExtResource("5_eusem")
text = "Диаграмма Исикава"

[node name="B_Histogram" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_normal_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_fonts/font = ExtResource("3_tt3af")
theme_override_font_sizes/font_size = 65
theme_override_styles/focus = ExtResource("4_7spjx")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover_pressed = ExtResource("4_7spjx")
theme_override_styles/hover_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover = ExtResource("4_7spjx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nqfso")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b4onk")
theme_override_styles/normal_mirrored = ExtResource("5_eusem")
theme_override_styles/normal = ExtResource("5_eusem")
text = "Гистограмма"

[node name="B_Paretto" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_normal_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_fonts/font = ExtResource("3_tt3af")
theme_override_font_sizes/font_size = 65
theme_override_styles/focus = ExtResource("4_7spjx")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover_pressed = ExtResource("4_7spjx")
theme_override_styles/hover_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover = ExtResource("4_7spjx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nqfso")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b4onk")
theme_override_styles/normal_mirrored = ExtResource("5_eusem")
theme_override_styles/normal = ExtResource("5_eusem")
text = "Диаграмма Парето"

[node name="B_Map" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/font_outline_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_normal_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_focus_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_colors/icon_disabled_color = Color(0.129412, 0.0666667, 0.0117647, 1)
theme_override_fonts/font = ExtResource("3_tt3af")
theme_override_font_sizes/font_size = 65
theme_override_styles/focus = ExtResource("4_7spjx")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover_pressed = ExtResource("4_7spjx")
theme_override_styles/hover_mirrored = ExtResource("4_7spjx")
theme_override_styles/hover = ExtResource("4_7spjx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_nqfso")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b4onk")
theme_override_styles/normal_mirrored = ExtResource("5_eusem")
theme_override_styles/normal = ExtResource("5_eusem")
text = "Контрольная Карта"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/B_Ishikawa" to="." method="_on_b_ishikawa_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/B_Histogram" to="." method="_on_b_histogram_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/B_Paretto" to="." method="_on_b_paretto_pressed"]
